# prometheus-write

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  compose.yaml  prometheus.proto  prometheus.yml
examples/: counter.rs  gauge.rs  multithreaded.rs
src/: batcher.rs  lib.rs  registry.rs
